--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: PrimalGamesCore
-main: anullihate.primalgamescore.PrimalGamesCore
-version: 1.0
-api: 1.0.0
+main: dev.anullihate.primalgamescore.PrimalGamesCore
+version: "1.0"
+api: ["1.0.5"]
 author: anullihate
